Tue Jun 21 10:05:13 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.2

	* pokernetwork/pokerserver.py (PokerXML): base class and
	  derived classes PokerXMLRPC and PokerSOAP to support 
	  XML-RPC and SOAP

	* examples/xmlrpc-soap.py: XML-RPC and SOAP client test
	
Mon Jun 20 21:52:46 2005  Loic Dachary  <loic@gnu.org>

	* conf/poker.pem: self signed certificate
	* pokerclient2d/poker2d.py: support SSL connections
	* pokernetwork/pokerserver.py: allow SSL connections

Mon Jun 20 09:21:42 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py: restructure to allow multiple
	  protocols.

Wed Jun 15 21:05:46 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.1

	* debian/*: more robust installation process

Mon Jun 06 17:00:04 2005  Loic Dachary  <loic@gnu.org>

	* pokerui/pokerrenderer.py (PokerRenderer.hold): hold if in
	  stream mode only. Also hold when observing a table.

Sun Jun 05 12:09:59 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerbot.py (PokerBotFactory.__init__): name generation

Fri Jun 03 21:16:42 2005  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/lobby.c (handle_lobby): s/stud7/7stud/

	* pokerui/pokerrenderer.py (PokerRenderer.showTournaments): handle tables/tournament
	  switching with persistent values.

	* pokernetwork/pokerclient.py (PokerClientFactory.__init__): end_round and begin_round
	  delays

	* pokernetwork/pokerserver.py (PokerServerFactory.getPersonalInfo): email None 
	  converted to ""

	* pokerui/pokerinterface.py (PokerInterface.handleLobby): two arguments only
	  and not three (https://gna.org/bugs/index.php?func=detailitem&item_id=2387)

	* pokernetwork/pokerserver.py (PokerServer.listTables): 
	* pokernetwork/pokerclient.py (PokerClientProtocol.resendPackets): fill all game
	  information.

Fri May 06 10:31:37 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.0