@@ -28,14 +28,15 @@ from re import match
 
 NAME_TOO_SHORT = 1
 NAME_TOO_LONG = 2
-NAME_MUST_START_WITH_LETTER = 20
-NAME_NOT_ALNUM = 21
-PASSWORD_TOO_SHORT = 3
-PASSWORD_TOO_LONG = 4
-PASSWORD_NOT_ALNUM = 30
-INVALID_EMAIL = 5
-ALREADY_EXISTS = 7
-SERVER_ERROR = 8
+NAME_MUST_START_WITH_LETTER = 3
+NAME_NOT_ALNUM = 4
+PASSWORD_TOO_SHORT = 5
+PASSWORD_TOO_LONG = 6
+PASSWORD_NOT_ALNUM = 7
+INVALID_EMAIL = 8
+NAME_ALREADY_EXISTS = 9
+EMAIL_ALREADY_EXISTS = 10
+SERVER_ERROR = 11
 
 NAME_LENGTH_MAX = 20
 NAME_LENGTH_MIN = 5
